Add PostMatchMangaEndpoint
